# spr26-Team-5

./: .gitignore  Jessie-test  README.md  eric-test.txt  james-test.txt
code/backend/: README.md  pyproject.toml
code/backend/app/: db.py  main.py  recognition.py  schemas.py
code/backend/data/: face_recall.sqlite
code/desktop_webcam_demo/: README.md  pyproject.toml
code/desktop_webcam_demo/desktop_webcam/: __init__.py  app.py  camera.py  client.py
code/ios/FaceRecall/: APIClient.swift  FaceRecallApp.swift  Info.plist  Models.swift  PhotoWatcher.swift
code/ios/FaceRecall.xcodeproj/: project.pbxproj
code/ios/FaceRecall.xcodeproj/project.xcworkspace/xcuserdata/jameschen.xcuserdatad/: UserInterfaceState.xcuserstate
code/ios/FaceRecall.xcodeproj/xcuserdata/jameschen.xcuserdatad/xcschemes/: xcschememanagement.plist
code/ios/FaceRecall/Views/: ContentView.swift
code/ios/Nemo/: APIClient.swift  Info.plist  Models.swift  NemoApp.swift  NotificationManager.swift  PhotoWatcher.swift  SpeechManager.swift
code/ios/Nemo.xcodeproj/: project.pbxproj
code/ios/Nemo.xcodeproj/project.xcworkspace/xcuserdata/jameschen.xcuserdatad/: UserInterfaceState.xcuserstate
code/ios/Nemo/Views/: ContentView.swift  CreatePersonView.swift  PatientModeView.swift  PersonDetailView.swift  PhotoPickerView.swift
