[project]
name = "face-recall-backend"
version = "0.1.0"
description = "FastAPI backend for the iPhone face recognition prototype."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "numpy==2.0.2",
    "pillow==11.1.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
real-recognition = [
    "face-recognition==1.3.0",
    "setuptools>=75.0.0,<81.0.0",
]
test = [
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
